--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@tanstack/vue-query": "^4.20.5",
+    "@types/nanoid": "^3.0.0",
+    "generate-avatar": "^1.4.10",
+    "mini-svg-data-uri": "^1.4.4",
+    "nanoid": "^4.0.0",
     "object-path": "^0.11.8",
     "senp-ui": "^0.0.10"
   }
